syntax = "proto3";
package crosschain;

import "pkg/coin/coin.proto";

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

message InTxTracker {
  int64 chain_id = 1;
  string tx_hash = 2;
  pkg.coin.CoinType coin_type = 3;
}
